# alt-branch-pkg-cmp

./: MANIFEST.in  README.md  cli.py  pkgset.py  pyproject.toml  requirements.txt
src/: cli.py  pkgset.py
src/tests/: test_pkgset.py
src/tests/data/: dataset1.json  dataset2.json  diff1.json  diff2.json  newer1.json  newer2.json
